--- a/src/components/resources.css
+++ b/src/components/resources.css
@@ -35,6 +35,7 @@
     /* border: 2px solid var(--nav-light);
     border-radius:0 0 20px 20px ; */
     color: var(--secondary-color);
+    word-wrap: break-word;
 }
 
 .resources .url:hover,
